test/simple.ruse
// fail

func main() int {
    var a int
    var a int = 4 // error
    const b int = 4
    a
    &a
    &d // error
    &&a // error

    var c intx // error
    b(a, b, c) // error

    a.b.c.d.e // error
    a.b(a, b, c).c // error
    return a
}
